# nft-mint

./: README.md  uri.json
backend/: .eslintrc.js  .gitignore  Dockerfile  docker-compose.yaml  nest-cli.json  ormconfig.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
backend/ReadApi/: WrapperConnection.ts
backend/src/: app.module.ts  main.ts  message.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/collection/: collection.controller.ts  collection.module.ts  collection.service.ts
backend/src/common/: base-filter.dto.ts  base.entity.ts  base.service.ts
backend/src/merkle-tree/: merkle-tree.controller.ts  merkle-tree.module.ts  merkle-tree.service.ts
backend/src/nft/: nft.controller.ts  nft.module.ts  nft.service.ts
backend/src/user/: user.controller.ts  user.module.ts  user.service.ts
backend/utils/: helpers.ts
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/components/: burn-nft-form.tsx  collection-form.tsx  create-tree-form.tsx  mint-nft-form.tsx  nft-item.tsx  node-select.tsx  transfer-nft-form.tsx
frontend/config/: api.ts  routes.ts  site.ts
frontend/idl/: mint_nft.json  mint_nft.ts
frontend/libs/: shyft.ts
frontend/pages/: collection.tsx  index.tsx  mint.tsx  view.tsx
frontend/styles/: globals.css
frontend/types/: index.d.ts
frontend/utils/: get-tree-options.ts  tools.ts
mint-nft/: Anchor.toml  package.json  tsconfig.json
mint-nft/programs/mint-nft/: Cargo.toml
mint-nft/programs/mint-nft/src/: lib.rs
mint-nft/tests/: mint-nft.ts
(+31 files in other folders)
